<resources>
    <string name="app_name">MultiplicationFun</string>
    <string name="rightText">Right</string>
    <string name="wrongText">Wrong</string>
    <string name="time_30s">Time: </string>
    <string name="score_5">Score: 0</string>
    <string name="_2_2">2 * 2</string>
    <string name="_2">= 2</string>
    <string name="your_score">Your Score</string>
    <string name="practice_enjoy">Practice And Enjoy</string>
    <string name="score_board">Score Board</string>
    <string name="high_score">High Score</string>
</resources>
